kubernetes/elasticsearch-service-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  selector:
    app: elasticsearch
  ports:
    - name: port-es
      port: 9200
      targetPort: 9200
    - name: port-kibana
      port: 5601
      targetPort: 5601
  type: LoadBalancer
