kubernetes/endpoint-external.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-seico
subsets:
  - addresses:
    - ip: 185.8.239.196
    ports:
      - name: http
        port: 80
      - name: https
        port: 443
