kubernetes/service-external.yml
apiVersion: v1
kind: Service
metadata:
  name: external-seico
spec:
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
