kubernetes/service-maintenance.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service-maint
spec:
  type: LoadBalancer
  # type: NodePort
  selector:
    app: nginx
    rel: maint
  ports:
    - protocol: TCP
      port: 81
      targetPort: 80
      # nodePort: 30100
