kubernetes/service-public.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: LoadBalancer
  # type: NodePort
  selector:
    app: nginx
    rel: stable
  ports:
    - protocol: TCP
      port: 80
      # targetPort: 80
      # nodePort: 30100
